Closed Bug 1709614 Opened 3 years ago Closed 3 years ago

double tap zoom on lists inside wikipedia sidebars tables zoom too far

Categories

(Core :: Panning and Zooming, defect)

defect

Tracking

()

VERIFIED FIXED
90 Branch
Tracking Status
firefox89 --- verified
firefox90 --- verified

People

(Reporter: tnikkel, Assigned: tnikkel)

References

Details

Attachments

(1 file)

Load https://en.wikipedia.org/wiki/United_States
In the sidebar on the right, double tap one of the percentages in the Ethnic groups box. Ideally we'd zoom to the side bar width, but we zoom to smaller than that.

From bug 1699147, comment 27.

Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c3cafff6f652
Allow the double tap heuristic to look at grand parent for table cells. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch

Comment on attachment 9220377 [details]
Bug 1709614. Allow the double tap heuristic to look at grand parent for table cells. r?emilio

Beta/Release Uplift Approval Request

  • User impact if declined: double tap zoom on wikipedia sidebars and other similar things zooms in too far sometimes
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): very slight change to double tap heuristic, affects no other code/functionality.
  • String changes made/needed:
Attachment #9220377 - Flags: approval-mozilla-beta?

Comment on attachment 9220377 [details]
Bug 1709614. Allow the double tap heuristic to look at grand parent for table cells. r?emilio

Small patch with tests and we are in early betas, approved for 89 beta 9, thanks.

Attachment #9220377 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

This is verified fixed using Firefox 89.0b9 (BuildId:20210506185706) and Firefox 90.0a1 (BuildID:20210506214311) on macOS 10.14.

Double tap to zoom now zooms accordingly to the tables width.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: