Bug 1709614. Allow the double tap heuristic to look at grand parent for table cells. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D114361